syntax = "proto3";
package GameProtobufs;

// Converts a Unity Transform to a protobuf message

message Vector3Message {
	float x = 1;
	float y = 2;
	float z = 3;
}

message QuaternionMessage {
	float w = 1;
	float x = 2;
	float y = 3;
	float z = 4;
}

message TransformMessage {
	Vector3Message position = 1;
	QuaternionMessage quaternion = 2;
}
